--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
         <header class="article-info clearfix">
   <h1 itemprop="name">
     
-      <a href="index.html" title="Hello World" itemprop="url">Hello World</a>
+      <a href="index.html" title="Hello World" itemprop="url">Qian Xie</a>
   </h1>
   <p class="article-author">By
        
